--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"bits-ui": "^0.16.0",
 		"clsx": "^2.1.0",
+		"embla-carousel-svelte": "^8.0.0-rc22",
+		"pocketbase": "^0.21.1",
 		"radix-icons-svelte": "^1.2.1",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.20"
